--- a/package.json
+++ b/package.json
@@ -2,38 +2,33 @@
   "name": "mario",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "^11.11.0",           
+    "@emotion/styled": "^11.11.0",         
+    "@mui/material": "^5.15.20",           
+    "@mui/icons-material": "^5.15.20",     
+    "react": "^18.2.0",                    
+    "react-dom": "^18.2.0",               
+    "react-router-dom": "^6.23.1",        
+    "framer-motion": "^11.2.11"           
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",           
+    "@types/react-dom": "^18.2.22",       
+    "@typescript-eslint/eslint-plugin": "^7.2.0", 
+    "@typescript-eslint/parser": "^7.2.0",     
+    "@vitejs/plugin-react": "^4.2.1",     
+    "eslint": "^8.57.0",                  
+    "eslint-plugin-react-hooks": "^4.6.0", 
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.2.2",                
+    "vite": "^5.2.0"                       
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   }
 }
