--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Invitacion NinjaGO Mario 4",
+  "name": "Cumpleanos feliz Marito Ninja!",
   "icons": [
     {
       "src": "favicon.ico",
